# arduino-vision

./: .env.example  .gitignore  99-usb-serial.rules  README.md  api_server.py  arduino_tools.py  fix_serial.sh  main.py  pyproject.toml
docs/: index.html
sketches/blink_led_pin7/: blink_led_pin7.ino
sketches/led_always_on_pin7/: led_always_on_pin7.ino
sketches/led_blink_pin8/: led_blink_pin8.ino
